(executable
 (name test)
 (libraries lwt lwt.unix)
 (preprocess
  (staged_pps ppx_let_locs)))

(rule
 (targets trace.result)
 (deps
  (:test test.exe))
 (action
  (with-stdout-to
   %{targets}
   (run %{test}))))

(rule
 (alias runtest)
 (action
  (diff trace_%{read:../ocaml_version.txt}.expected trace.result)))
