(library
 (name ppx_let_locs_typer)
 (public_name ppx_let_locs.typer)
 (flags
  (:standard -w -9))
 (modules Typeclass Typecore Typemod)
 (libraries compiler-libs.common))

(rule
 (action
  (copy ../ocaml_version.txt ocaml_version.txt)))

(rule
 (action
  (copy typemod_%{read:ocaml_version.txt}.ml typemod.ml)))

(rule
 (action
  (copy typemod_%{read:ocaml_version.txt}.mli typemod.mli)))

(rule
 (action
  (copy typecore_%{read:ocaml_version.txt}.ml typecore.ml)))

(rule
 (action
  (copy typecore_%{read:ocaml_version.txt}.mli typecore.mli)))

(rule
 (action
  (copy typeclass_%{read:ocaml_version.txt}.ml typeclass.ml)))

(rule
 (action
  (copy typeclass_%{read:ocaml_version.txt}.mli typeclass.mli)))
