(library
 (name ppx_let_locs_typer)
 (public_name ppx_let_locs.typer)
 (flags
  (:standard -w -9))
 (modules Typeclass Typecore Typemod)
 (libraries compiler-libs.common))

(rule
 (action
  (copy ../ocaml_version.txt ocaml_version.txt)))

(copy_files
 (files 410/*)
 (enabled_if
  (and
   (>= %{ocaml_version} 4.10.0)
   (< %{ocaml_version} 4.11.0))))

(copy_files
 (files 412/*)
 (enabled_if
  (and
   (>= %{ocaml_version} 4.12.0)
   (< %{ocaml_version} 4.13.0))))
