(library
 (name ppx_let_locs_ocaml_parsing)
 (public_name ppx_let_locs.ocaml.parsing)
 (flags
  (:standard
   -w
   -9
   -open
   Ppx_let_locs_ocaml_utils
   -open
   Ppx_let_locs_ocaml_stdlib))
 (libraries
  ocaml-compiler-libs.common
  ocaml-migrate-parsetree
  ppx_let_locs_ocaml_utils
  ppx_let_locs_ocaml_stdlib))
